--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "axios": "^1.13.5",
     "dotenv-webpack": "^8.1.1",
     "openai": "^6.22.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-query": "^3.39.3",
     "styled-components": "^6.3.9",
     "tsconfig-paths-webpack-plugin": "^4.2.0"
   },
