--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.91.3",
     "axios": "^1.13.5",
     "dotenv-webpack": "^8.1.1",
+    "formik": "^2.4.9",
     "openai": "^6.22.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
